other/prevent-duplicate-hpa/.chainsaw-test/good.yaml
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: good-hpa
spec:
  maxReplicas: 3
  minReplicas: 1
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: redis-deployment
  targetCPUUtilizationPercentage: 50
