other/prevent-duplicate-hpa/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-duplicate-hpa
status:
  ready: true
