other/prevent-duplicate-hpa/.chainsaw-test/prereq.yaml
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: httpd-hpa-exist
spec:
  maxReplicas: 3
  minReplicas: 1
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: httpd-deployment
  targetCPUUtilizationPercentage: 50
