other/prevent-duplicate-hpa/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: prevent-duplicate-hpa
spec:
  steps:
  - name: 01 - Create policy and Enforce
    try:
    - apply:
        file: ../prevent-duplicate-hpa.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: prevent-duplicate-hpa
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: 02 - Create some unique HPAs
    try:
    - apply:
        file: prereq.yaml
  - name: 03 - Try to create duplicate HPAs
    try:
    - apply:
        file: bad.yaml
        expect:
        - check:
            ($error != null): true
  - name: 04 - Create new unique HPAs
    try:
    - apply:
        file: good.yaml
